--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -254,11 +254,10 @@
 
 .post-content {
   margin-bottom: $spacing-unit;
+  font-family: $post-font-family;
 
   h1, h2, h3, h4, h5, h6 {
-    margin-top: $spacing-unit;
-    font-family: $post-font-family;
-  }
+    margin-top: $spacing-unit;}
 
   h2 {
     @include relative-font-size(1.75);
