--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,6 +1,6 @@
 // Placeholder to allow overriding predefined variables smoothly.
 
 
-$base-font-family: Georgia, Times, serif !default;
+$base-font-family: Tahoma, "Roboto", "Segoe UI", Arial, sans-serif !default;
 $post-font-family: Georgia, Times, serif !default;
 $code-font-family: Monaco, Consolas, "Lucida Console", monospace !default;
