--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,23 @@
   {%- include head.html -%}
 
   <body>
+    <div class="container">
+      <div class="row">
+        <aside class="col-md-3">
+          <!-- Sidebar content -->
+          <nav>
+            <ul>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 2</a></li>
+              <li><a href="#">Link 3</a></li>
+            </ul>
+          </nav>
+        </aside>
+        <div class="col-md-9">
+          <!-- Main content -->
+        </div>
+      </div>
+    </div>
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
