--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,27 +4,19 @@
   {%- include head.html -%}
 
   <body>
-    <div class="container">
-      <div class="row">
-        <aside class="col-md-3">
-          <!-- Sidebar content -->
-          <nav>
-            <ul>
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 2</a></li>
-              <li><a href="#">Link 3</a></li>
-            </ul>
-          </nav>
-        </aside>
-        <div class="col-md-9">
-          <!-- Main content -->
-        </div>
-      </div>
-    </div>
-
+    
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
+      <div class="with-sidebar">
+        <div>
+          <header class="site-header">
+            <div class="wrapper">
+              <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
+            </div>
+          </header>
+        </div>
+        <div>   
+          {{ content}}
+        </div>
       </div>
     </main>
 
