--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,26 +5,14 @@
 
   <body>
     
-      <header class = "docs-header">
-          <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
-      </header>
-      <div class="docs-main">
-        
-          {{ content }}
-      </div>
-    
-
-    
   <main class="row">
     <div class="column">
       <header class = "docs-header">
         <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
     </header>
     </div>
-    <div class="column" style="background-color:#bbb;">
-
+    <div class="column" >
         {{ content }}
- 
     </div>
   <main>
 
