--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,12 +6,12 @@
   <body>
     
   <main class="row">
-    <div class="column">
+    <div class="column left">
       <header class = "docs-header">
         <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
     </header>
     </div>
-    <div class="column" >
+    <div class="column right" >
         {{ content }}
     </div>
   <main>
