--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -12,9 +12,16 @@
   /* Create two equal columns that floats next to each other */
   .column {
     float: left;
-    width: 30%;
     padding: 10px;
     height: 300px; /* Should be removed. Only for demonstration */
+  }
+
+  .left {
+    width: 30%;
+  }
+  
+  .right {
+    width: 70%;
   }
   
   /* Clear floats after the columns */
