--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,13 +5,15 @@
 
   <body>
     
-  <main class="row">
+  <main>
+    <div class = "row">
     <div class="column left">
         <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
     </div>
     <div class="column right" >
         {{ content }}
     </div>
+   </div>
   <main>
 
   </body>
