--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,14 +8,13 @@
   <main>
     <div class = "row">
     <div class="column left">
-        <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
+       {%- include leftbar.html -%}
     </div>
     <div class="column right" >
         {{ content }}
     </div>
    </div>
-  <main>
-
+  </main>
   </body>
 
 </html>
