--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -13,7 +13,6 @@
   .column {
     float: left;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
   }
 
   .left {
@@ -29,6 +28,17 @@
     content: "";
     display: table;
     clear: both;
+  }
+
+  .sidebar {
+    height: 100%;
+    position: fixed;
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    background-color: #111; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+    align-content: right;
   }
   
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
