--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
 
   <body>
     
-  <main>
+  <main class = "content">
     <div class = "row">
     <div class="column left">
        {%- include leftbar.html -%}
