--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -12,7 +12,6 @@
   /* Create two equal columns that floats next to each other */
   .column {
     float: left;
-    padding: 10px;
   }
 
   .left {
@@ -23,6 +22,8 @@
     width: 70%;
   }
   
+
+
   /* Clear floats after the columns */
   .row:after {
     content: "";
@@ -47,3 +48,11 @@
       width: 100%;
     }
   }
+
+  /* make all the content centered with pad on the left and right if screen is big enough */
+    .content {
+        margin: 0 auto;
+        padding: 0 20px;
+        max-width: 960px;
+    }
+
