--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -26,43 +26,48 @@
   .post-content{
     width: 80%;
   }
-  
 
-
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-  .sidebar {
-    height: 100%;
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    background-color: #111; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    align-content: right;
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-    }
-  }
-
-  /* make all the content centered with pad on the left and right if screen is big enough */
+    /* make all the content centered with pad on the left and right if screen is big enough */
     .content {
         margin: 0 auto;
         padding: 0 20px;
         width: 80%;
     }
 
+  
+
+
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .sidebar {
+        height: 100%;
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        background-color: #111; /* Black */
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 20px;
+        align-content: right;
+    }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+    @media screen and (max-width: 600px) {
+        .column {
+            width: 100%;
+        }
+    }
+
+
     @media screen and (max-width: 800px) {
         .content {
             margin: 0 0;
+            width: 100%;
+        }
+        .post-content{
             width: 100%;
         }
     }
