--- a/_includes/leftbar.html
+++ b/_includes/leftbar.html
@@ -1,3 +1,5 @@
 <div class="sidebar">
     <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
+
+    {%-include footer.html-%}
 </div>
