--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
   {%- include head.html -%}
 
   <body>
-    <main class = "content">
+    <main>
       <div class = "row">
         <div class="column left">
           {%- include leftbar.html -%}
